Not found handled and also added a footer

--- a/src/App.css
+++ b/src/App.css
@@ -136,3 +136,9 @@ body{
 .result-table td:last-child {
   text-align: right;
 }
+
+.footer {
+  background-color: #f2f2f2;
+  padding: 10px;
+  text-align: center;
+}
